Modified nginx conf to use docker container name
- X.X.X.X is public ip of machine.
- YYYY is exposed port of container

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -12,6 +12,11 @@ server {
     }
 }
 
+upstream example.org {
+  server X.X.X.X:YYYY;
+}
+
+
 server {
     listen 443 ssl;
     server_name example.org;
@@ -23,7 +28,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://example.org;
+        proxy_pass  http://example_container_name;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
